impl song action

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -9,7 +9,13 @@ en:
     level_author: "Level Author: %{author}"
     bpm: "BPM: %{bpm}"
     difficulty_rank: "Difficulty Rank: %{rank}"
+    level_id: "Level ID: %{id}"
     level_hash: "Level Hash: %{hash}"
     click_to_copy: "Click to Copy"
-    play: "Play"
-    stop: "Stop"
+    pending_change_list_title: "Pending Changes"
+    commit_changes: "Commit"
+    reset_changes: "Reset"
+    pending_action_title: "Action"
+    pending_song_title: "Song"
+    delete: "Delete"
+    rename: "Rename"
