--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -9,7 +9,13 @@ zh-CN:
     level_author: "关卡作者: %{author}"
     bpm: "BPM: %{bpm}"
     difficulty_rank: "难度等级: %{rank}"
+    level_id: "关卡 ID: %{id}"
     level_hash: "关卡哈希: %{hash}"
     click_to_copy: "点击复制"
-    play: "播放"
-    stop: "停止"
+    pending_change_list_title: "待定的修改"
+    commit_changes: "提交"
+    reset_changes: "重置"
+    pending_action_title: "操作"
+    pending_song_title: "歌曲"
+    delete: "删除"
+    rename: "重命名"
